tests/fixtures/invalid/chr_none.py
# Cannot call chr() with None
x = chr(None)
